[project]
name = "crime-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb-engine>=0.13.6",
    "duckdb>=1.1.3",
    "folium>=0.18.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "streamlit-folium>=0.23.2",
    "streamlit>=1.40.2",
]
